force-app/main/default/objects/Customer_Notification__c/Customer_Notification__c.object-meta.xml
<CustomObject>
    <description>This is a custom object used for DocuSign Bulk Send</description>
    <label>Customer Notification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>