force-app/main/default/objects/Customer_Notification__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>