force-app/main/default/objects/Customer_Notification__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>16</length>
    <type>Text</type>
</CustomField>