force-app/main/default/objects/Customer_Notification__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>EffectiveDate</label>
    <type>Date</type>
</CustomField>