force-app/main/default/objects/Customer_Notification__c/fields/Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>Envelope_ID__c</fullName>
    <label>Envelope ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>