force-app/main/default/objects/Customer_Notification__c/fields/info10__c.field-meta.xml
<CustomField>
    <fullName>info10__c</fullName>
    <description>This is a backup field for DocuSign bulk send to add extra details if any country requires.</description>
    <label>info10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>