force-app/main/default/objects/Customer_Notification__c/fields/info1__c.field-meta.xml
<CustomField>
    <fullName>info1__c</fullName>
    <description>This is a backup field for DocuSign bulk send to add extra details if any country requires.</description>
    <label>info1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>