force-app/main/default/objects/Customer_Notification__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FM Letter</fullName>
            </value>
            <value>
                <fullName>DM Letter</fullName>
            </value>
            <value>
                <fullName>RM Letter</fullName>
            </value>
            <value>
                <fullName>South Africa Template 1</fullName>
            </value>
            <value>
                <fullName>South Africa Template 2</fullName>
            </value>
            <value>
                <fullName>South Africa Template 3</fullName>
            </value>
            <value>
                <fullName>Test Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>