force-app/main/default/objects/Customer_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All</label>
</ListView>